Make sure header text (showing group name) is not too long

--- a/src/global.sass
+++ b/src/global.sass
@@ -135,6 +135,12 @@ input
 	&:hover
 		opacity: 0.8
 
+h2
+	width: 75%
+	text-overflow: ellipsis
+	white-space: nowrap
+	overflow: hidden
+
 button
 	border: none
 	text-align: center
